# Blackhole

./: CMakeLists.txt  CMakePresets.json  README.md  imgui.ini
blackhole/: CMakeLists.txt  README.md
blackhole/cmake/: deps.cmake
cmake/: deps.cmake
shader/: blackhole_main.frag  bloom_brightness_pass.frag
src/: main.cpp  shader.cpp
src/app/: Window.cpp  Window.hpp  main.cpp
src/physics/: Geodesic.cpp  Geodesic.hpp  Schwarzschild.hpp  Tidal.hpp
src/render/: Renderer.cpp  Renderer.hpp  TextureLoader.cpp  TextureLoader.hpp
src/render/shaders/: bloom_brightness.frag  bloom_downsample.frag  bloom_upsample.frag  geodesic.frag  particle_trail.frag  particle_trail.vert  post.frag  post.vert  screen.vert
src/sim/: ParticleSystem.cpp  ParticleSystem.hpp  Scene.cpp  Scene.hpp
src/ui/: ImGuiLayer.cpp  ImGuiLayer.hpp
tests/: test_geodesic.cpp
